New melee spell and niagara effect
Spell works and vfx work, all needs now is dmg to be specified and actually just dmg in general hitbox and the such. Although there will be a merge coming up because of conflict in weapon parent so hopefully this goes well. dont think we've had to do this yet.

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Assets/Materials
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Animations/Assets/Combat_Animations/UsedCombatAnimations
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Textures/Characters/Ida
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Animations/ABPs
 None=======
 None=======
 None=======
@@ -278,7 +278,7 @@ None=======
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -905,7 +905,7 @@ PhysicsAssetGenerationSettings="\"Object\" "
 PhysicsAsset="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 None=======
 None=======
@@ -945,27 +945,8 @@ None=======
 None=======
 None=======
 None=======
-RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=DataTableEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Niagara
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
@@ -974,20 +955,29 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Health/Components/BPC_Health_V2.BPC_Health_V2
-OpenAssetsAtExit=/Game/Enemies/BPs/BP_Enemy.BP_Enemy
-OpenAssetsAtExit=/Game/Enemies/BPs/BP_Boss_Enemy.BP_Boss_Enemy
-OpenAssetsAtExit=/Game/Player/BPs/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Health/Components/BPC_Floating_Damage.BPC_Floating_Damage
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 OpenAssetsAtExit=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
-OpenAssetsAtExit=/Game/Enemies/Structs_Tables/DT_Enemy_Info.DT_Enemy_Info
-OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Spells.DT_Spells
-OpenAssetsAtExit=/Game/Combat/Components/BPC_AttackHandler.BPC_AttackHandler
-OpenAssetsAtExit=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks.BPC_LightAttacks
-OpenAssetsAtExit=/Game/Combat/Weapons/BPs/BP_WeaponParent.BP_WeaponParent
-OpenAssetsAtExit=/Game/Combat/Ranged/Components/BPC_Spells.BPC_Spells
-OpenAssetsAtExit=/Game/Combat/Weapons/Components/BPC_AttachWeapon.BPC_AttachWeapon
-OpenAssetsAtExit=/Game/Assets/Skeletal_Meshes/Charlie/New/please_Skeleton.please_Skeleton
+OpenAssetsAtExit=/Game/Player/Structs_Tables/DT_Player_Character_Info.DT_Player_Character_Info
+OpenAssetsAtExit=/Game/Assets/Animations/ABPs/ABP_MIX.ABP_MIX
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -5136,35 +5126,35 @@ BPC_Enemy_Spawning_Director_C.ComponentTick=True
 FbxImportUI.Mesh=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/Skeletal_Meshes/Charlie/New/leila_bald_rigged_2_Mesh_Skeleton
-MRUItem1=/Game/Assets/Skeletal_Meshes/Charlie/New/leila_bald_rigged_2_Mesh_PhysicsAsset
-MRUItem2=/Game/Assets/Skeletal_Meshes/Charlie/New/please_Skeleton
-MRUItem3=/Game/Combat/Weapons/Components/BPC_AttachWeapon
-MRUItem4=/Game/Combat/Ranged/Components/BPC_Spells
-MRUItem5=/Game/Combat/Weapons/BPs/BP_WeaponParent
-MRUItem6=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
-MRUItem7=/Game/Combat/Components/BPC_AttackHandler
-MRUItem8=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Spells
-MRUItem9=/Game/Assets/Skeletal_Meshes/Lydia/Rigged_Ida_Tpose_Skeleton
-MRUItem10=/Game/Merethas_Character/Rig/Merethas_Standing_Idle
-MRUItem11=/Game/Merethas_Character/Rig/Merethas_Standing_Idle_Skeleton
-MRUItem12=/Game/Levels_Maps/Dev_Level
-MRUItem13=/Game/Levels_Maps/mapLevel
-MRUItem14=/Game/Enemies/Structs_Tables/DT_Enemy_Info
-MRUItem15=/Game/Assets/Skeletal_Meshes/Charlie/Charli_LowPoly_possibly_broken__Skeleton
-MRUItem16=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
-MRUItem17=/Game/Health/Components/BPC_Floating_Damage
-MRUItem18=/Game/VFX/Damage_Niumber/NS_Floating_Numbers_FX
-MRUItem19=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem20=/Game/Enemies/BPs/BP_Boss_Enemy
-MRUItem21=/Game/Enemies/BPs/BP_Enemy
-MRUItem22=/Game/Health/Components/BPC_Health_V2
-MRUItem23=/Game/Combat/Weapons/Melee/Struct_Tables/DT_Melee_Weapon_Info
-MRUItem24=/Game/Combat/Weapons/Melee/Struct_Tables/Struct_Melee_Weapon_Info
-MRUItem25=/Game/Player/Structs_Tables/DT_Player_Character_Info
-MRUItem26=/Game/Assets/Animations/Assets/Mixamo_Converted_From_UE/MIX_Anim_Backflip_Double_Slash
-MRUItem27=/Game/Combat/Weapons/Interfaces/BPI_Melee
-MRUItem28=/Game/Assets/Animations/ABPs/ABP_MIX
+MRUItem0=/Game/Assets/Animations/ABPs/ABP_MIX
+MRUItem1=/Game/Player/Structs_Tables/DT_Player_Character_Info
+MRUItem2=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
+MRUItem3=/Game/Assets/Skeletal_Meshes/Charlie/New/leila_bald_rigged_2_Mesh_Skeleton
+MRUItem4=/Game/Assets/Skeletal_Meshes/Charlie/New/leila_bald_rigged_2_Mesh_PhysicsAsset
+MRUItem5=/Game/Assets/Skeletal_Meshes/Charlie/New/please_Skeleton
+MRUItem6=/Game/Combat/Weapons/Components/BPC_AttachWeapon
+MRUItem7=/Game/Combat/Ranged/Components/BPC_Spells
+MRUItem8=/Game/Combat/Weapons/BPs/BP_WeaponParent
+MRUItem9=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
+MRUItem10=/Game/Combat/Components/BPC_AttackHandler
+MRUItem11=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Spells
+MRUItem12=/Game/Assets/Skeletal_Meshes/Lydia/Rigged_Ida_Tpose_Skeleton
+MRUItem13=/Game/Merethas_Character/Rig/Merethas_Standing_Idle
+MRUItem14=/Game/Merethas_Character/Rig/Merethas_Standing_Idle_Skeleton
+MRUItem15=/Game/Levels_Maps/Dev_Level
+MRUItem16=/Game/Levels_Maps/mapLevel
+MRUItem17=/Game/Enemies/Structs_Tables/DT_Enemy_Info
+MRUItem18=/Game/Assets/Skeletal_Meshes/Charlie/Charli_LowPoly_possibly_broken__Skeleton
+MRUItem19=/Game/Health/Components/BPC_Floating_Damage
+MRUItem20=/Game/VFX/Damage_Niumber/NS_Floating_Numbers_FX
+MRUItem21=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem22=/Game/Enemies/BPs/BP_Boss_Enemy
+MRUItem23=/Game/Enemies/BPs/BP_Enemy
+MRUItem24=/Game/Health/Components/BPC_Health_V2
+MRUItem25=/Game/Combat/Weapons/Melee/Struct_Tables/DT_Melee_Weapon_Info
+MRUItem26=/Game/Combat/Weapons/Melee/Struct_Tables/Struct_Melee_Weapon_Info
+MRUItem27=/Game/Assets/Animations/Assets/Mixamo_Converted_From_UE/MIX_Anim_Backflip_Double_Slash
+MRUItem28=/Game/Combat/Weapons/Interfaces/BPI_Melee
 MRUItem29=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
 
 [PlacementMode]
@@ -6914,7 +6904,7 @@ Cascade.TimeStamp=2024.10.04-15.08.48
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2024.10.04-15.08.49
 DistCurveEditor.LastCompileMethod=Unknown
-MixamoAnimationRetargeting.TimeStamp=2024.11.22-09.54.34
+MixamoAnimationRetargeting.TimeStamp=2024.11.24-18.03.54
 MixamoAnimationRetargeting.LastCompileMethod=External
 PluginWarden.TimeStamp=2024.10.04-15.08.52
 PluginWarden.LastCompileMethod=Unknown
@@ -6923,8 +6913,8 @@ PortalProxies.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
