--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/Engine.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/Engine.ini
@@ -47,6 +47,7 @@ Paths=../../../Engine/Plugins/FX/Niagara/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Marketplace/MixamoAnimationRetargeting2_5.3/Content
+Paths=../../../Engine/Plugins/FMODStudio/Content
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path="")
