I DID NOT EDIT ANY OF THE SPELL SOUND FUNCTIONALITY JUST MOVED THE SPELL AUDIO STRUCT FROM CHARACTERISTICS FOLDER TO THE PARENT FOLDER.

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1013,9 +1013,9 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1045,7 +1045,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PathColor]
 /Game/_UE_Content=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
@@ -4872,7 +4872,7 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 InputAction=
 UserDefinedStruct=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.Structure.3A2C30C8404DDA27F3E1DCA18B57C56B,UserDefinedStruct.Structure.4B3644E9451BAB98D4C823BD39547F14,UserDefinedStruct.Structure.AB732F544849C919FD9C1A8392F9AF29,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.ChargeInfo_36_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.CharacterInfo_4_7E88B37C48A144D82062C88B20F20CD8,UserDefinedStruct.DefaultValues.CharacterInfo_7_7E88B37C48A144D82062C88B20F20CD8,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.InstantInfo_38_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.Immobilised_15_A6538F6241C6C5A623A52B8B927CD4DA,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.BurstInfo_40_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.Burn_2_A31ADAD5466B6E04845AB7BDAFECC735,UserDefinedStruct.DefaultValues.Bleeding_13_B61CBB8C42FA68FFED01288F5A225E45,UserDefinedStruct.DefaultValues.BasicMovementInfo_29_836C670A4CFE01D4E5C7818F9B9C661A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.PiercingInfo_42_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.Poisoned_14_D351EBAF48B78A3FC1742ABF4E2135DC,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.AOEInfo_44_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.AttractingInfo_54_89145D5F4104ACA31D0046B445A80C29,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.SplitInfo_46_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.Spells_12_03D6700A43242027BE70A18A6486F183,UserDefinedStruct.DefaultValues.Stunned_16_98CBD2254F3E1CB88025D2BCA6CF127B,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HomingInfo_48_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HealthInfo_5_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.HealthInfo_27_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.WeaponInfo_8_C677D2A64046D59F138511BD8C2C3485,UserDefinedStruct.DefaultValues.UIInfo_51_6745DFF74B6CD39E38C2B6B0065BC998,UserDefinedStruct.DefaultValues.Turned_17_EF1FB2024F9506FF1C949EB01835F961
 Struct_Spell_AOE=
-Struct_Spell_Charge=
+Struct_Spell_Charge=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.Structure.3A2C30C8404DDA27F3E1DCA18B57C56B,UserDefinedStruct.Structure.4B3644E9451BAB98D4C823BD39547F14,UserDefinedStruct.Structure.AB732F544849C919FD9C1A8392F9AF29,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.ChargeInfo_36_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.CharacterInfo_4_7E88B37C48A144D82062C88B20F20CD8,UserDefinedStruct.DefaultValues.CharacterInfo_7_7E88B37C48A144D82062C88B20F20CD8,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.InstantInfo_38_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.Immobilised_15_A6538F6241C6C5A623A52B8B927CD4DA,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.BurstInfo_40_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.Burn_2_A31ADAD5466B6E04845AB7BDAFECC735,UserDefinedStruct.DefaultValues.Bleeding_13_B61CBB8C42FA68FFED01288F5A225E45,UserDefinedStruct.DefaultValues.BasicMovementInfo_29_836C670A4CFE01D4E5C7818F9B9C661A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.PiercingInfo_42_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.Poisoned_14_D351EBAF48B78A3FC1742ABF4E2135DC,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.AOEInfo_44_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.AttractingInfo_54_89145D5F4104ACA31D0046B445A80C29,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.SplitInfo_46_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.Spells_12_03D6700A43242027BE70A18A6486F183,UserDefinedStruct.DefaultValues.Stunned_16_98CBD2254F3E1CB88025D2BCA6CF127B,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HomingInfo_48_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HealthInfo_5_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.HealthInfo_27_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.WeaponInfo_8_C677D2A64046D59F138511BD8C2C3485,UserDefinedStruct.DefaultValues.UIInfo_51_6745DFF74B6CD39E38C2B6B0065BC998,UserDefinedStruct.DefaultValues.Turned_17_EF1FB2024F9506FF1C949EB01835F961
 Struct_Spell_General_Info=
 Struct_Spell_Instant=
 Struct_Spell_Burst=
@@ -5334,9 +5334,9 @@ MaterialEditorInstanceConstant.General=True
 Blueprint.ClassOptions=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/Skeletal_Meshes/Lidia/textured/lidia_sm_Skeleton
-MRUItem1=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Audio
-MRUItem2=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Charge
+MRUItem0=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Charge
+MRUItem1=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_Audio
+MRUItem2=/Game/Assets/Skeletal_Meshes/Lidia/textured/lidia_sm_Skeleton
 MRUItem3=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
 MRUItem4=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_Info
 MRUItem5=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
@@ -5930,6 +5930,7 @@ None=======
 /Game/SFX/Ambience/SA_Ambience.SA_Ambience=0
 /Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Audio.Struct_Spell_Audio=1
 /Game/Assets/Skeletal_Meshes/Lidia/textured/lidia_sm_Skeleton.lidia_sm_Skeleton=1
+/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_Audio.Struct_Spell_Audio=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
