--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/Engine.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/Engine.ini
@@ -51,6 +51,7 @@ Paths=../../../Engine/Plugins/FMODStudio/Content
 Paths=../../../Engine/Plugins/Fab/Content
 Paths=../../../Engine/Plugins/Animation/DeformerGraph/Content
 Paths=../../../Engine/Plugins/Runtime/HairStrands/Content
+Paths=../../../Engine/Plugins/Marketplace/Achievem004a613bd15eV11/Content
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path="")
@@ -77,12 +78,4 @@ TunnelMulticastEndpoint=
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld.OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic.Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
 
