Melee attack sound fix no longer looping.

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -310,7 +310,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" \"Object.Default.Hovered Functions\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -779,7 +779,7 @@ MaterialExpression="\"Object\" "
 MaterialExpressionOneMinus="\"Object\" "
 BP_Main_Menu_GM_C=
 GameModeBase=
-Info="\"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" "
+Info=
 K2Node_SetFieldsInStruct="\"Object\" "
 PointLight="\"Object\" "
 Light="\"Object\" "
@@ -1030,6 +1030,8 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
@@ -1039,7 +1041,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1050,7 +1051,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -1060,12 +1060,9 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/UI/HUD/Widgets/WBP_HUD.WBP_HUD
-OpenAssetsAtExit=/Game/Enemies/BPs/BP_Boss_Enemy.BP_Boss_Enemy
-OpenAssetsAtExit=/Game/Player/BPs/BP_Player_Select.BP_Player_Select
-OpenAssetsAtExit=/Game/Enemies/AI/Tasks/BTT_Enemy_Attack.BTT_Enemy_Attack
-OpenAssetsAtExit=/Game/Enemies/Structs_Tables/DT_Enemy_Info.DT_Enemy_Info
-OpenAssetsAtExit=/Game/Combat/Components/BPC_AttackHandler.BPC_AttackHandler
+OpenAssetsAtExit=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
+OpenAssetsAtExit=/Game/Assets/Animations/ABPs/ABP_MIX.ABP_MIX
+OpenAssetsAtExit=/Game/SFX/Combat/SwordSwings/SwordAttack.SwordAttack
 
 [MessageLog]
 LastLogListing=PIE
@@ -5531,36 +5528,36 @@ SkeletalBodySetup.Collision=True
 CineCameraActor.AssetUserData=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Combat/Components/BPC_AttackHandler
-MRUItem1=/Game/Enemies/Structs_Tables/DT_Enemy_Info
-MRUItem2=/Game/Enemies/AI/Tasks/BTT_Enemy_Attack
-MRUItem3=/Game/Enemies/AI/Trees/BT_Enemy_Chase_Player_Ranged
-MRUItem4=/Game/Levels_Maps/Dev_Level
-MRUItem5=/Game/Player/BPs/BP_Player_Select
-MRUItem6=/Game/Enemies/BPs/BP_Boss_Enemy
-MRUItem7=/Game/Levels_Maps/mapLevel
-MRUItem8=/Game/UI/HUD/Widgets/WBP_HUD
-MRUItem9=/Game/Assets/Animations/ABPs/ABP_MIX
-MRUItem10=/Game/Levels_Maps/Main_Menu_Lvl
-MRUItem11=/Game/UI/Screens/Loading/WBP_Loading_Screen
-MRUItem12=/Game/UI/Screens/Main/WBP_Main_Screen
-MRUItem13=/Game/Assets/Textures/Anteater_Logo_Gif
-MRUItem14=/Game/UI/Screens/Character_Select/Widgets/WBP_Character_Select
-MRUItem15=/Game/Enemies/BPs/BP_Boss_Trigger
-MRUItem16=/Game/UI/Screens/Character_Select/Widgets/WBP_Character_Info
-MRUItem17=/Game/UI/Screens/Character_Select/Widgets/WBP_Rotatable_Character
-MRUItem18=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
-MRUItem19=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
-MRUItem20=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem21=/Game/Player/Input/IMCs/IMC_Default
-MRUItem22=/Game/Player/Input/IMCs/IMC_Character_Select
-MRUItem23=/Game/Player/Input/Actions/Miscellaneous/IA_Restart_Level
-MRUItem24=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/Sword/sword1
-MRUItem25=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/Sword/holder
-MRUItem26=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/Sword/handle1
-MRUItem27=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/Skirt/skirt
-MRUItem28=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/ShoulderPlates/plates
-MRUItem29=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/LeatherStrapsandPins/straps
+MRUItem0=/Game/SFX/Combat/SwordSwings/SwordAttack
+MRUItem1=/Game/Assets/Animations/ABPs/ABP_MIX
+MRUItem2=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
+MRUItem3=/Game/Combat/Components/BPC_AttackHandler
+MRUItem4=/Game/Enemies/Structs_Tables/DT_Enemy_Info
+MRUItem5=/Game/Enemies/AI/Tasks/BTT_Enemy_Attack
+MRUItem6=/Game/Enemies/AI/Trees/BT_Enemy_Chase_Player_Ranged
+MRUItem7=/Game/Levels_Maps/Dev_Level
+MRUItem8=/Game/Player/BPs/BP_Player_Select
+MRUItem9=/Game/Enemies/BPs/BP_Boss_Enemy
+MRUItem10=/Game/Levels_Maps/mapLevel
+MRUItem11=/Game/UI/HUD/Widgets/WBP_HUD
+MRUItem12=/Game/Levels_Maps/Main_Menu_Lvl
+MRUItem13=/Game/UI/Screens/Loading/WBP_Loading_Screen
+MRUItem14=/Game/UI/Screens/Main/WBP_Main_Screen
+MRUItem15=/Game/Assets/Textures/Anteater_Logo_Gif
+MRUItem16=/Game/UI/Screens/Character_Select/Widgets/WBP_Character_Select
+MRUItem17=/Game/Enemies/BPs/BP_Boss_Trigger
+MRUItem18=/Game/UI/Screens/Character_Select/Widgets/WBP_Character_Info
+MRUItem19=/Game/UI/Screens/Character_Select/Widgets/WBP_Rotatable_Character
+MRUItem20=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
+MRUItem21=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem22=/Game/Player/Input/IMCs/IMC_Default
+MRUItem23=/Game/Player/Input/IMCs/IMC_Character_Select
+MRUItem24=/Game/Player/Input/Actions/Miscellaneous/IA_Restart_Level
+MRUItem25=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/Sword/sword1
+MRUItem26=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/Sword/holder
+MRUItem27=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/Sword/handle1
+MRUItem28=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/Skirt/skirt
+MRUItem29=/Game/Assets/Skeletal_Meshes/Emma/KamarrasTexture/ShoulderPlates/plates
 
 [PlacementMode]
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
